bigchanges second commit

--- a/tests/example-test-project/pug/_orderOverview.pug
+++ b/tests/example-test-project/pug/_orderOverview.pug
@@ -1,4 +1,4 @@
-mixin orderOverview(cart)
+mixin orderOverview(cart : Cart) 
   ul
     each item in cart.items
       li= item.product.name + ' - ' + item.quantity + ' pcs'
