commit 3 lot off things

--- a/tests/example-test-project/pug/sample.pug
+++ b/tests/example-test-project/pug/sample.pug
@@ -10,5 +10,5 @@ block headContent
 
 block content
   +orderOverview(cart)
-  p Welcome #{user.vliegwiel}
+  p Welcome #{user.vlicxcxdddcxccccegwddddiel}
   p elaba alles goed hier laliu
