--- a/tests/example-test-project/pug/sample2.pug
+++ b/tests/example-test-project/pug/sample2.pug
@@ -10,5 +10,5 @@ block headContent
 
 block content
   +orderOverview(cart)
-  p Welcome #{user.vliegwiel}
+  p Welcome #{user.anaxxxxcfdfdsdsdfdccme}
   p elaba alles goed hier laliu
