feat: update Pug templates and TypeScript configuration for improved testing

--- a/tests/example-test-project/pug/_orderOverview.pug
+++ b/tests/example-test-project/pug/_orderOverview.pug
@@ -1,4 +1,6 @@
-//@ expects {}
+//@ import { Cart } from '../types/models.js';
+
+//@ expect {}
 mixin orderOverview(cart : Cart) 
   ul
     each item in cart.items
