--- a/tests/example-test-project/pug/sample.pug
+++ b/tests/example-test-project/pug/sample.pug
@@ -10,5 +10,6 @@ block headContent
 
 block content
   +orderOverview(cart)
-  p Welcome #{user.vlicxcxdddcxccccegwddddiel}
+  p Welcome #{user.name} to your order history page!
   p elaba alles goed hier laliu
+ddddvcvc
